Fixing some smaller issues, esp. spacing on iOS

--- a/app/assets/stylesheets/_shared.css.scss
+++ b/app/assets/stylesheets/_shared.css.scss
@@ -19,6 +19,7 @@ $baseline:         18px;
 $default-size:     12px;
 $header-height:  1.75em;
 $header-size:    2.75em;
+$smaller-header-size: 2.25em;
 $footer-height:     6em;
 $page-width:     1200px;
 $sidebar-width:     26%;
